# boo2

./: CMakeLists.txt  LICENSE
cmake/: Findhsh.cmake  macCatalyst.cmake  nx.cmake
cmake/nx/: SwitchTools_nx.cmake  switch-hsh.ld  switch-hsh.specs
include/boo2/: BooObject.hpp  System.hpp  boo2.hpp
include/boo2/audiodev/: IAudioSubmix.hpp  IAudioVoice.hpp  IAudioVoiceEngine.hpp  IMIDIPort.hpp  IMIDIReader.hpp  MIDIDecoder.hpp  MIDIEncoder.hpp
include/boo2/bits/: AppKitEvents.def  ApplicationAppKit.hpp  ApplicationCommon.hpp  ApplicationNx.hpp  ApplicationPosix.hpp  ApplicationUIKit.hpp  ApplicationWayland.hpp  ApplicationWin32.hpp  ApplicationXcb.hpp  SpecialKeycodes.def  UIKitEvents.def  WaylandRegistryEntries.def  WindowDecorations.hpp  XButtons.def  XcbAtoms.def
include/boo2/inputdev/: DeviceBase.hpp  DeviceFinder.hpp  DeviceSignature.hpp  DeviceToken.hpp  DolphinSmashAdapter.hpp  DualshockPad.hpp  GenericPad.hpp  HIDParser.hpp  IHIDListener.hpp  NintendoPowerA.hpp  RevolutionPad.hpp  XInputPad.hpp
lib/: ApplicationCommon.cpp  Boo2Implementation.cpp  Common.hpp  HshImplementation.cpp  WindowDecorations.cpp  WindowDecorationsRes.cpp
lib/audiodev/: AQS.cpp  AudioMatrix.cpp  AudioMatrix.hpp  AudioMatrixSSE.cpp  AudioSubmix.cpp  AudioSubmix.hpp  AudioVoice.cpp  AudioVoice.hpp  AudioVoiceEngine.cpp  AudioVoiceEngine.hpp  Common.hpp  LinuxMidi.hpp  LtRtProcessing.cpp  LtRtProcessing.hpp  MIDICommon.cpp  MIDICommon.hpp  MIDIDecoder.cpp  MIDIEncoder.cpp  PulseAudio.cpp  WASAPI.cpp  WAVOut.cpp  libnx.cpp  sse2neon.h
lib/audiodev/soxr/: CMakeLists.txt
lib/audiodev/soxr/src/: CMakeLists.txt  pffft.c  vr32s.c
lib/inputdev/: CafeProPad.cpp  DeviceBase.cpp  DeviceFinder.cpp  DeviceSignature.cpp  DolphinSmashAdapter.cpp  DualshockPad.cpp  GenericPad.cpp  HIDDeviceBSD.cpp  HIDDeviceIOKit.cpp  HIDDeviceNX.cpp  HIDDeviceUWP.cpp  HIDDeviceUdev.cpp  HIDDeviceWinUSB.cpp  HIDListenerBSD.cpp  HIDListenerIOKit.cpp  HIDListenerNX.cpp  HIDListenerUWP.cpp  HIDListenerUdev.cpp  HIDListenerWinUSB.cpp  HIDParser.cpp  IHIDDevice.hpp  NintendoPowerA.cpp  RevolutionPad.cpp
testapp/: CMakeLists.txt  testapp.cpp  testpipeline.cpp  testpipeline.hpp
